build: target Java 17